2004-08-23 22:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassInspector.m: Corrected bug introduced a few 
	days ago.  The actions tag in the class inspector wasn't 
	functioning correctly.
	
2004-08-23 15:06 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSPanel.[hm]:
	* Palettes/1Windows/GormNSWindow.[hm]: Changed the name
	of the styleMask method to _styleMask.  Since this serves
	as a "proxy" of the original value so that it can be edited
	without effecting the window, it shouldn't have the same
	name as the method in the parent class anyway.  The new 
	window decoration code was calling this method. 
	* Palettes/1Windows/main.m: [GormWindowAttributesInspector
	_setValuesFromControl:] and [GormWindowAttributesInspector
	_getValuesFromObject] changed to use new method name.
	
2004-08-21 00:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSPanel.m:
	* Palettes/1Windows/GormNSWindow.m: Added code to prevent
	redundant release and subsequent crash.
	
2004-08-18 00:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassEditor.m: Cleaned up some code.
	* GormClassInspector.m: Added code in the data source for
	both the GormActionDataSource and GormOutletDataSource 
	classes in the class inspector to call the method in 
	GormDocument which removes connections when a connections'
	name changes.  Corrects Bug #100026.
	* GormMenuEditor.m: If a menu item being added to a popup
	has a submenu, reject it.
	
2004-08-13 18:30 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Disabled class parser menu item in [Gorm
	validateMenuItem:].
	* GormClassManager.m: [GormClassManager parseClass:]
	commented out contents of this method.   The class
	parser needs to be replaced and it shouldn't be
	used until it's rewritten.
	
2004-08-12 21:41 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: [Gorm validateMenuItem:] deselect the cut, delete,