@@ -1,3 +1,9 @@
+2004-08-25 22:28 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/1Windows/GormNSWindow.m: Removed canBecomeKeyWindow
+	method.  This was returning NO and preventing the method user
+	from setting the font.
+	
 2004-08-23 22:28 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormClassInspector.m: Corrected bug introduced a few 
